css/layouts/_offre.scss
.video {
  height: 100vh;
  background-image: url('../img/yellow_blue/Asset 7.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: -60%;

  @include media-breakpoint-up(lg) {
    height: initial;
    background-size: contain;
    background-position: 90%;
  }

  h1 {
    //font-size: 2.5rem;
    @include media-breakpoint-up(lg) {
      font-size: 4rem;
    }

    strong {
      display: block;
    }
  }

  video {
    height: 100%;
    width: auto;
    opacity: .2;
    transition: opacity .3s ease-out;
    cursor: pointer;
    position: absolute;
    right: -50px;

    @include media-breakpoint-up(lg) {
      max-height: 100vh;
      position: initial;
      right: 0;
    }
  }
}

.player {
  overflow: hidden;
  height: 70vh;

  @include media-breakpoint-up(lg) {
    height: auto;
  }
}

.play-button {
  display: flex;
  border: 1px solid var(--white);
  width: 70px;
  height: 70px;
  justify-content: center;
  align-items: center;
  top: calc(50% - 35px);
  left: calc(50% - 35px);

  svg {
    height: 15px;
    position: relative;
    top: 1px;
    left: 3px;

    path {
      fill: var(--white);
    }
  }
}

h2 {
  font-size: 2rem;

  strong {
    display: block;
    font-weight: 500;
  }
}

.nav-tabs {
  border-bottom: none;

  .nav-item {
    margin: 0 1rem 1rem 0;

    .nav-link {
      padding: 0.5rem 0;
      color: var(--black);
      font-weight: 400;

      &.active {
        color: var(--primary-color);
        border: none;
        border-bottom: 1px solid var(--primary-color);
        background: transparent;
      }
    }
  }
}

.tab-content {
  font-size: 1.2rem;
  font-weight: 400;

  h3 {
    font-size: 1.3rem;
    margin: 0;
  }
}

.steps {
  padding-left: 4rem;
}

.step {
  font-weight: 400;
  width: 65vw !important;

  .index {
    color: var(--tertiary-color);
    font-size: 3rem;
  }

  .title {
    position: relative;
    left: -4rem;
  }
}

.advantage {
  height: 800px;

  h2 strong {
    display: inline;
  }

  .list-group-item-action {
    color: var(--black);
    opacity: .3;
    text-decoration: none;
    border: none;
    background: transparent;

    &.active {
      opacity: 1;
      text-indent: -1rem;

      &:before {
        content: '— ';
        color: var(--tertiary-color);
      }
    }
  }

  .content {
    background: url('../img/red_blue/Asset 27.png') no-repeat center/cover var(--primary-color);
    color: var(--white);
    font-weight: 400;
    max-width: 640px;
    overflow: hidden;

    & > div {
      overflow-y: scroll;
      position: relative;
      scrollbar-width: none;

      @include media-breakpoint-up(lg) {
        mask-image: linear-gradient(to bottom, transparent 0%, black 30%, black 70%, transparent 100%);
      }

      .advantage-body {
        margin: auto;

        &.first {
          padding-top: 100%;
        }

        &.last {
          padding-bottom: 100%;
        }

        @include media-breakpoint-up(lg) {
          padding: 28% 0;
        }
      }
    }

  }
}

.small-text {
  font-size: 0.8rem;
  font-weight: 400;

  @include media-breakpoint-up(lg) {
    font-size: initial;
    font-weight: initial;
  }
}

.bg-red {
  background: rgba(var(--tertiary-color), 0.8);
}

.vertical-controls {
  transform: rotate(90deg);
  position: absolute;
  left: -5em;
}

.steps-section {
  background-image: url('../img/red_blue/Asset 30.png'), url('../img/yellow_red/Asset 19.png');
  background-repeat: no-repeat;
  background-size: 13%, 18%;
  background-position-y: bottom, top;
  background-position-x: left, right;
  max-height: 800px;
}

.key-points {
  background-image: url('../img/yellow_red/Asset 20.png');
  background-repeat: no-repeat;
  background-size: 18%;
  background-position-y: bottom;
  background-position-x: right;

  @include media-breakpoint-up(lg) {
    min-height: 645px;
  }
}

